test_source = files(
  'efl_dbus_test_init.c',
  # 'efl_dbus_test_model.c',
  # 'efl_dbus_test_model_connection.c',
  # 'efl_dbus_test_model_object.c',
  # 'efl_dbus_test_model_proxy.c',
  # 'efl_dbus_test_model_method.c',
  # 'efl_dbus_test_model_signal.c',
  # 'efl_dbus_test_object.c',
  # 'efl_dbus_test_message.c',
  # 'efl_dbus_test_signal_handler.c',
  # 'efl_dbus_test_proxy.c',
  # 'efl_dbus_test_pending_cancel.c',
  # 'efl_dbus_test_fake_servermodel_proxy.c',
  # 'efl_dbus_fake_server.c',
)

tests += [
	{	
		'name'    : 'dbus',
		'sources' : test_source,
		'dep_objs': [ eo ],
		'inc_dirs': inc_eo,
	},
]