tests += [
	{	
		'name'    : 'shared',
		'sources' : [ 
			'shared/test_shared_abi.c',
			'shared/test_shared_abstract_content.c',
			'shared/test_shared_accessor.c',
			'shared/test_shared_array.c',
			'shared/test_shared_barrier.c',
			'shared/test_shared_benchmark.c',
			'shared/test_shared_bezier.c',
			'shared/test_shared_binbuf.c',
			'shared/test_shared_binshare.c',
			'shared/test_shared_clist.c',
			'shared/test_shared_convert.c',
			'shared/test_shared_counter.c',
			'shared/test_shared_cow.c',
			'shared/test_shared_crc.c',
			'shared/test_shared_debug.c',
			'shared/test_shared_error.c',
			'shared/test_shared_file.c',
			'shared/test_shared_fp.c',
			'shared/test_shared_freeq.c',	
			'shared/test_shared_hash.c',
			'shared/test_shared_inarray.c',
			'shared/test_shared_inlist.c',
			'shared/test_shared_iterator.c',
			'shared/test_shared_lalloc.c',
			'shared/test_shared_list.c',
			'shared/test_shared_lock.c',
			'shared/test_shared_log.c',
			'shared/test_shared_magic.c',
			'shared/test_shared_main.c',		
			'shared/test_shared_matrix.c',
			'shared/test_shared_matrixsparse.c',
			'shared/test_shared_mempool.c',
			'shared/test_shared_module.c',
			'shared/test_shared_module_dummy.c',
			'shared/test_shared_quad.c',
			'shared/test_shared_quadtree.c',
			'shared/test_shared_quaternion.c',
			'shared/test_shared_range.c',
			'shared/test_shared_rbtree.c',
			'shared/test_shared_rectangle.c',
			'shared/test_shared_safepointer.c',
			'shared/test_shared_sched.c',
			'shared/test_shared_simple_xml_parser.c',
			'shared/test_shared_slice.c',
			'shared/test_shared_slstr.c',
			'shared/test_shared_strbuf.c',
			'shared/test_shared_str.c',
			'shared/test_shared_stringshare.c',
			'shared/test_shared_thread.c',
			'shared/test_shared_tiler.c',
			'shared/test_shared_tmpstr.c',
			'shared/test_shared_trash.c',
			'shared/test_shared_ustr.c',
			'shared/test_shared_ustringshare.c',
			'shared/test_shared_util.c',
			# 'shared/test_shared_value.c', # bug here
			'shared/test_shared_vector.c',
			'shared/test_shared_vpath.c',
			'shared/test_shared_xattr.c',

		],
		'dep_objs': [ shared, dep_libm ],
		'inc_dirs': inc_shared
	},
]