test_source = files(
	'test_shared_abi.c',
	'test_shared_abstract_content.c',
	'test_shared_accessor.c',
	'test_shared_array.c',
	'test_shared_barrier.c',
	'test_shared_benchmark.c',
	'test_shared_bezier.c',
	'test_shared_binbuf.c',
	'test_shared_binshare.c',
	'test_shared_clist.c',
	'test_shared_convert.c',
	'test_shared_counter.c',
	'test_shared_cow.c',
	'test_shared_crc.c',
	'test_shared_debug.c',
	'test_shared_error.c',
	'test_shared_file.c',
	'test_shared_fp.c',
	'test_shared_freeq.c',	
	'test_shared_hash.c',
	'test_shared_inarray.c',
	'test_shared_inlist.c',
	'test_shared_iterator.c',
	'test_shared_lalloc.c',
	'test_shared_list.c',
	'test_shared_lock.c',
	'test_shared_log.c',
	'test_shared_magic.c',
	'test_shared_main.c',		
	'test_shared_matrix.c',
	'test_shared_matrixsparse.c',
	'test_shared_mempool.c',
	'test_shared_module.c',
	'test_shared_module_dummy.c',
	'test_shared_quad.c',
	'test_shared_quadtree.c',
	'test_shared_quaternion.c',
	'test_shared_range.c',
	'test_shared_rbtree.c',
	'test_shared_rectangle.c',
	'test_shared_safepointer.c',
	'test_shared_sched.c',
	'test_shared_simple_xml_parser.c',
	'test_shared_slice.c',
	'test_shared_slstr.c',
	'test_shared_strbuf.c',
	'test_shared_str.c',
	'test_shared_stringshare.c',
	'test_shared_thread.c',
	'test_shared_tiler.c',
	'test_shared_tmpstr.c',
	'test_shared_trash.c',
	'test_shared_ustr.c',
	'test_shared_ustringshare.c',
	'test_shared_util.c',
	# 'test_shared_value.c', # TODO: bug here
	'test_shared_vector.c',
	'test_shared_vpath.c',
	'test_shared_xattr.c',
)

tests += [
	{	
		'name'    : 'shared',
		'sources' : test_source,
		'dep_objs': [ shared, dep_libm ],
		'inc_dirs': inc_shared,
		'c_args'  : [ '-DTESTS_WD="`pwd`"' ]
	},
]