test_efl_shared_src = files(
  'efl_shared_suite.c',
  'test_efl_shared_abi.c',
  'test_efl_shared_fp.c',
  'test_efl_shared_ustringshare.c',
  'test_efl_shared_ustr.c',
  'test_efl_shared_binshare.c',
  'test_efl_shared_binbuf.c',
  'test_efl_shared_debug.c',
  'test_efl_shared_inarray.c',
  'test_efl_shared_array.c',
  'test_efl_shared_clist.c',
  'test_efl_shared_error.c',
  'test_efl_shared_sched.c',
  'test_efl_shared_log.c',
  'test_efl_shared_magic.c',
  'test_efl_shared_inlist.c',
  'test_efl_shared_main.c',
  'test_efl_shared_counter.c',
  'test_efl_shared_lalloc.c',
  'test_efl_shared_hash.c',
  'test_efl_shared_iterator.c',
  'test_efl_shared_accessor.c',
  'test_efl_shared_module.c',
  'test_efl_shared_convert.c',
  'test_efl_shared_rbtree.c',
  'test_efl_shared_file.c',
  'test_efl_shared_benchmark.c',
  'test_efl_shared_mempool.c',
  'test_efl_shared_rectangle.c',
  'test_efl_shared_range.c',
  'test_efl_shared_list.c',
  'test_efl_shared_matrixsparse.c',
  'test_efl_shared_tiler.c',
  'test_efl_shared_strbuf.c',
  'test_efl_shared_str.c',
  'test_efl_shared_quadtree.c',
  'test_efl_shared_simple_xml_parser.c',
  'test_efl_shared_value.c',
  'test_efl_shared_cow.c',
  'test_efl_shared_barrier.c',
  'test_efl_shared_tmpstr.c',
  'test_efl_shared_trash.c',
  'test_efl_shared_lock.c',
  'test_efl_shared_xattr.c',
  'test_efl_shared_crc.c',
  'test_efl_shared_quad.c',
  'test_efl_shared_matrix.c',
  'test_efl_shared_quaternion.c',
  'test_efl_shared_vector.c',
  'test_efl_shared_bezier.c',
  'test_efl_shared_safepointer.c',
  'test_efl_shared_slice.c',
  'test_efl_shared_freeq.c',
  'test_efl_shared_slstr.c',
  'test_efl_shared_vpath.c',
  'test_efl_shared_abstract_content.c',
  'test_efl_shared_thread.c',
)

efl_shared_suite = executable('efl_shared_suite',
  include_directories : inc_config,
  sources             : test_efl_shared_src,
  dependencies        : [ dep_libm, dep_check, shared ],
  c_args              : [ '-DTESTS_WD="`pwd`"',
                          '-DTESTS_BUILD_DIR="'+meson.current_build_dir()+'"',
                          '-DTESTS_SRC_DIR="'+meson.current_source_dir()+'"' ]
)

test('efl_shared-suite', efl_shared_suite,
  env     : test_env,
  timeout : master_timeout
)