examples = [
  'eina_accessor_01',
  'eina_array_01',
  'eina_array_02',
  'eina_hash_01',
  'eina_hash_02',
  'eina_hash_03',
  'eina_hash_04',
  'eina_hash_05',
  'eina_hash_06',
  'eina_hash_07',
  'eina_hash_08',
  'eina_inarray_01',
  'eina_inarray_02',
  'eina_inarray_03',
  'eina_inlist_01',
  'eina_inlist_02',
  'eina_inlist_03',  
  'eina_iterator_01',
  'eina_list_01',
  'eina_list_02',
  'eina_list_03',
  'eina_list_04',  
  # 'eina_tiler_01',  #that example is using ecore evas ... WTF
  'eina_value_01',
  'eina_value_02',
  'eina_value_03',
]

foreach example : examples
  executable(example, example + '.c', dependencies: shared)
endforeach
